# extern

./: .gitattributes  README.md  TODO.md  build.py  symbols.xlsx
_scripts/: __init__.py
_test/: CMakeLists.txt  build.py  test.cc
assimp/: CMakeLists.txt  build.py
assimp/cmake/: assimpConfig.cmake.in  assimpLibrary.cmake
egl/: CMakeLists.txt  build.py
egl/cmake/: eglConfig.cmake.in  eglLibrary.cmake
getopt/: CMakeLists.txt  build.py
getopt/cmake/: getoptConfig.cmake.in  getoptLibrary.cmake
glad/: CMakeLists.txt  build.py
glad/cmake/: gladConfig.cmake.in  gladLibrary.cmake
gles/: CMakeLists.txt  build.py
gles/cmake/: glesConfig.cmake.in  glesLibrary.cmake
glfw/: CMakeLists.txt  build.py
glfw/cmake/: glfwConfig.cmake.in  glfwLibrary.cmake
gli/: CMakeLists.txt  build.py
gli/cmake/: gliConfig.cmake.in  gliLibrary.cmake
glm/: CMakeLists.txt  build.py
glm/cmake/: glmConfig.cmake.in  glmLibrary.cmake
glslang/: CMakeLists.txt  build.py
glslang/cmake/: glslangConfig.cmake.in  glslangLibrary.cmake
ktx/: CMakeLists.txt  build.py
ktx/cmake/: ktxConfig.cmake.in  ktxLibrary.cmake
shaderc/: CMakeLists.txt  build.py
shaderc/cmake/: shadercConfig.cmake.in  shadercLibrary.cmake
spirv/: CMakeLists.txt  build.py
spirv/cmake/: spirvConfig.cmake.in  spirvLibrary.cmake
stb/: CMakeLists.txt  build.py
stb/cmake/: stbConfig.cmake.in  stbLibrary.cmake
stb/test/: CMakeLists.txt  test.cc  test.py
zlib/: CMakeLists.txt  build.py
zlib/cmake/: zlibConfig.cmake.in  zlibLibrary.cmake
zlib/test/: CMakeLists.txt  test.cc
