cmake_minimum_required(VERSION 3.4)
project(stb VERSION 2.16 LANGUAGES C)

set(STB_MAJOR_VERSION 2)
set(STB_MINOR_VERSION 16)
set(INSTALL_CONFIG_DIR  ${CMAKE_INSTALL_PREFIX}/lib/cmake/stb)
set(INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_PREFIX}/include/stb)
set(INSTALL_LIBRARY_DIR ${CMAKE_INSTALL_PREFIX}/lib)
set(INSTALL_ARCHIVE_DIR ${CMAKE_INSTALL_PREFIX}/lib)
set(INSTALL_RUNTIME_DIR ${CMAKE_INSTALL_PREFIX}/bin)

if(NOT DEFINED CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type")
endif()
set(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "Set debug library postfix")
set(CMAKE_CONFIGURATION_TYPES Debug Release CACHE TYPE INTERNAL FORCE)

if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
    add_definitions(-D_CRT_NONSTDC_NO_DEPRECATE)
	add_compile_options(/wd4047)
	add_compile_options(/wd4024)
	add_compile_options(/wd4077)
	add_compile_options(/wd4244)
	add_compile_options(/wd4267)	
	add_compile_options(/wd4311)
	add_compile_options(/wd4312)
	add_compile_options(/wd4477)
endif()

include(cmake/stbLibrary.cmake)
add_library(stb STATIC 
    ${HEADERS_PUBLIC}
    ${SOURCES_PRIVATE})  
    
target_include_directories(stb
    PRIVATE ${CMAKE_SOURCE_DIR}/project)  

	
target_compile_definitions(stb
	PUBLIC -DSTB_DEFINE
    PUBLIC -DSTB_C_LEXER_IMPLEMENTATION
    PUBLIC -DSTB_IMAGE_IMPLEMENTATION
    PUBLIC -DSTB_IMAGE_RESIZE_IMPLEMENTATION
    PUBLIC -DSTB_IMAGE_WRITE_IMPLEMENTATION
    PUBLIC -DSTB_TRUETYPE_IMPLEMENTATION
	#PUBLIC -DSTBCC_GRID_COUNT_X_LOG2=12
	#PUBLIC -DSTBCC_GRID_COUNT_Y_LOG2=12
    #PUBLIC -DSTB_CONNECTED_COMPONENTS_IMPLEMENTATION
    #PUBLIC -DSTB_DIVIDE_IMPLEMENTATION
    #PUBLIC -DSTB_DXT_IMPLEMENTATION
    #PUBLIC -DSTB_HERRINGBONE_WANG_TILE_IMPLEMENTATION
    #PUBLIC -DSTB_LEAKCHECK_IMPLEMENTATION
    #PUBLIC -DSTB_PERLIN_IMPLEMENTATION
    #PUBLIC -DSTB_RECT_PACK_IMPLEMENTATION
    #PUBLIC -DSTB_SPRINTF_IMPLEMENTATION
    #PUBLIC -DSTB_TEXTEDIT_IMPLEMENTATION
    #PUBLIC -DSTB_TILEMAP_EDITOR_IMPLEMENTATION
    #PUBLIC -DSTB_VOXEL_RENDER_IMPLEMENTATION
)

if(CMAKE_BUILD_TYPE MATCHES Release)
    target_compile_definitions(stb PRIVATE -DNDEBUG)
endif()

include(CMakePackageConfigHelpers)
configure_package_config_file(
    cmake/stbConfig.cmake.in
    ${CMAKE_BINARY_DIR}/stbConfig.cmake
    INSTALL_DESTINATION ${INSTALL_CONFIG_DIR}
    PATH_VARS INSTALL_LIBRARY_DIR INSTALL_INCLUDE_DIR)

set(STB_VERSION "${STB_MAJOR_VERSION}.${STB_MINOR_VERSION}")
write_basic_package_version_file(
    ${CMAKE_BINARY_DIR}/stbConfigVersion.cmake
    VERSION ${STB_VERSION} COMPATIBILITY SameMajorVersion)
    
install(FILES 
    ${CMAKE_BINARY_DIR}/stbConfig.cmake 
    ${CMAKE_BINARY_DIR}/stbConfigVersion.cmake
    DESTINATION ${INSTALL_CONFIG_DIR})
    
install(TARGETS stb EXPORT stbConfig
    LIBRARY DESTINATION ${INSTALL_LIBRARY_DIR}
    ARCHIVE DESTINATION ${INSTALL_ARCHIVE_DIR}
    RUNTIME DESTINATION ${INSTALL_RUNTIME_DIR})
    
install(FILES ${HEADERS_PUBLIC} 
    DESTINATION ${INSTALL_INCLUDE_DIR})